--- a/viz_i.Rmd
+++ b/viz_i.Rmd
@@ -226,8 +226,30 @@ weather_df %>%
 ```
 
 
+## Save and Embed
 
+Let's save a scatterplot
 
+```{r}
+weatherplot = 
+  weather_df %>%
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = .5)
+
+ggsave("./results/weather_plot.pdf", weather_plot, width = 8, height = 5)
+```
+
+What about embedding.
+
+```{r, fig.width=6, fig.height=3}
+weatherplot
+```
+
+Embedat different size.
+
+```{r, fig.width=12, fig.height=6}
+weatherplot
+```
 
 
 
